配色优化，显示总数

--- a/src/components/TagItem/index.module.less
+++ b/src/components/TagItem/index.module.less
@@ -40,7 +40,7 @@
       border-radius: 10px;
       margin-left: auto;
       flex: none;
-      background-color: #F2F2F2;
+      background-color: var(--normal-icon-bg);
       font-size: .65em;
       line-height: 20px;
       padding: 0 6px;
