--- a/src/layouts/ClassicLayout/List/ArticleList/ArticleItem/index.module.less
+++ b/src/layouts/ClassicLayout/List/ArticleList/ArticleItem/index.module.less
@@ -34,7 +34,7 @@
   }
 
   &:not(.active):hover {
-    box-shadow: var(--box-shadow1);
+    background-color: var(--common-hover-bg);
   }
 
   &.active {
