--- a/src/layouts/ClassicLayout/List/DailyList/DailyItem/index.module.less
+++ b/src/layouts/ClassicLayout/List/DailyList/DailyItem/index.module.less
@@ -4,28 +4,28 @@
   border-radius: 8px;
   position: relative;
   user-select: none;
-  background-color: #FAFAFA;
+  background-color: var(--normal-card-bg);
   border: 2px solid transparent;
   box-sizing: border-box;
   cursor: pointer;
   content-visibility: auto;
 
   &:not(.active):hover {
-    box-shadow: var(--box-shadow1);
+    background-color: var(--common-hover-bg);
   }
 
   &.active {
-    border: 2px solid #E1B9AB;
-    background-color: #FEF6F4;
+    border: 2px solid var(--active-text-color);
+    background-color: var(--active-bg-color);
     .moreIcon {
-      background-color: #FDE9E2;
+      background-color: var(--active-icon-bg);
     }
     .content {
       opacity: 1;
     }
     .time {
       font-weight: bold;
-      color: #8E6558;
+      color: var(--active-text-color);
     }
   }
 
