--- a/src/themes/dark.less
+++ b/src/themes/dark.less
@@ -7,19 +7,19 @@ html[data-theme="dark"] {
   --box-shadow1: 0px 3px 3px 0 rgba(128, 128, 128, .3);
   --box-shadow2: 0 4px 21px -12px rgba(0, 0, 0, .6);
   --block-panel-active-bg: #1a1b1d;
-  --common-hover-bg: #383838;
   --table-odd-bg: rgba(255, 255, 255, .05);
   --table-border-color: #606770;
   --card-bg-color: rgb(255 255 255 / 0.01);
   --bottom-line-bg: #5472e4;
   --tab-active-color: #272f3b;
-  --doc-fill-active: rgba(76, 136, 255, 0.2);
-  --doc-fill-text-color: #4c88ff;
   --scroller-track-background-color: rgba(255, 255, 255, 0.12);
   --scroller-thumb-background-color: rgba(255, 255, 255, 0.24);
-  --normal-card-bg: #333;
+  --normal-card-bg: #1D1F22;
+  --common-hover-bg: #404246;
   --normal-icon-bg: rgba(255, 255, 255, 0.1);
   --active-bg-color: hsl(168, 80%, 10%);
   --active-text-color: hsl(168, 50%, 80%);
   --active-icon-bg: hsl(168, 80%, 20%);
+  --bullet-list-item-bg: hsl(168, 45%, 90%);
+  --bullet-list-item-shodow: 0 0 0 .3em hsla(168, 90%, 85%, 0.55);
 }
