--- a/src/editor-extensions/card-link/components/CardLink/index.module.less
+++ b/src/editor-extensions/card-link/components/CardLink/index.module.less
@@ -1,4 +1,10 @@
 .cardLinkContainer {
-  border-bottom: 3px double var(--line-color);
+  border-bottom: 3px double var(--card-line-color);
   cursor: pointer;
+  color: var(--active-text-color);
+  //background: linear-gradient(var(--card-line-color), var(--card-line-color)) no-repeat center bottom / 100% 2px;
+  .icon {
+    color: var(--active-text-color);
+    vertical-align: -12.5%;
+  }
 }
