--- a/src/layouts/ClassicLayout/Content/DailyNote/index.module.less
+++ b/src/layouts/ClassicLayout/Content/DailyNote/index.module.less
@@ -21,6 +21,7 @@
     .editor {
       margin-top: 10px;
       height: calc(100vh - var(--title-bar-height) - 50px);
+      padding: 10px 0 20px;
       box-sizing: border-box;
       overflow-y: auto;
       &::-webkit-scrollbar {
