--- a/src/layouts/ClassicLayout/List/ArticleList/ArticleItem/index.module.less
+++ b/src/layouts/ClassicLayout/List/ArticleList/ArticleItem/index.module.less
@@ -23,7 +23,7 @@
     margin-bottom: 10px;
     border-radius: 4px;
     .title {
-      color: var(--text-normal);
+      color: #fff;
       font-size: 1.2em;
       font-weight: bold;
       // 超出部分用省略号显示
