--- a/src/layouts/ClassicLayout/Sidebar/index.module.less
+++ b/src/layouts/ClassicLayout/Sidebar/index.module.less
@@ -2,12 +2,12 @@
   width: 100%;
   height: 100%;
   box-sizing: border-box;
-  overflow-y: auto;
+  overflow-y: hidden;
   .header {
     padding: 0 16px;
     box-sizing: border-box;
     width: 100%;
-    height: 60px;
+    height: var(--title-bar-height);
     display: flex;
     align-items: center;
     gap: 10px;
@@ -40,6 +40,11 @@
     }
   }
   .list {
+    height: calc(100% - var(--title-bar-height));
+    overflow-y: auto;
+    &::-webkit-scrollbar {
+      display: none;
+    }
     padding: 16px;
     display: flex;
     flex-direction: column;
