--- a/src/themes/light.less
+++ b/src/themes/light.less
@@ -13,14 +13,16 @@ html[data-theme='light'] {
   --card-bg-color: rgb(255 255 255 / 0.4);
   --bottom-line-bg: #3358d4;
   --tab-active-color: #ecedf1;
-  --doc-fill-active: rgba( 20,86,240 ,0.15);
-  --doc-fill-text-color: #1456f0;
   --scroller-track-background-color: rgba(0, 0, 0, 0.04);
   --scroller-thumb-background-color: rgba(0, 0, 0, 0.06);
-  --normal-card-bg: #FAFAFA;
+  --normal-card-bg: hsl(168, 5%, 97%);
+  --common-hover-bg: hsl(168, 5%, 94%);
   --normal-icon-bg: #e8e8e8;
   --active-bg-color: hsl(168, 80%, 95%);
   --active-text-color: hsl(168, 50%, 30%);
-  --active-icon-bg: hsl(168, 80%, 90%);
+  --active-icon-bg: hsl(168, 60%, 80%);
+  --card-line-color: hsl(168, 40%, 80%);
+  --bullet-list-item-bg: hsl(168, 10%, 45%);
+  --bullet-list-item-shodow: 0 0 0 .3em hsla(168, 90%, 85%, 0.55);
 }
 
