feat: 添加项目功能

--- a/src/components/Editor/components/PreviewWithEditor/index.module.less
+++ b/src/components/Editor/components/PreviewWithEditor/index.module.less
@@ -49,6 +49,8 @@
     }
 
     .preview {
+      min-height: 40px;
+      box-sizing: border-box;
       &.extend {
         padding: 5px 0;
       }
