--- a/src/components/Editor/extensions/drop-common.less
+++ b/src/components/Editor/extensions/drop-common.less
@@ -11,7 +11,7 @@
       left: 0;
       right: 0;
       height: 2px;
-      background-color: var(--doc-fill-text-color);
+      background-color: var(--active-text-color);
     }
   }
   &.after {
@@ -22,7 +22,7 @@
       left: 0;
       right: 0;
       height: 2px;
-      background-color: var(--doc-fill-text-color);
+      background-color: var(--active-text-color);
     }
   }
 }
