feat: 可切换数据库

--- a/src/layouts/ClassicLayout/Sidebar/index.module.less
+++ b/src/layouts/ClassicLayout/Sidebar/index.module.less
@@ -125,6 +125,7 @@
             justify-content: center;
           }
           .title {
+            user-select: none;
             line-height: 32px;
           }
           .count {
