feat: 事件记录支持自动记录

--- a/src/editor-extensions/card-link/components/CardLink/index.module.less
+++ b/src/editor-extensions/card-link/components/CardLink/index.module.less
@@ -1,10 +1,5 @@
 .cardLinkContainer {
-  border-bottom: 3px double var(--card-line-color);
   cursor: pointer;
   color: var(--active-text-color);
-  //background: linear-gradient(var(--card-line-color), var(--card-line-color)) no-repeat center bottom / 100% 2px;
-  .icon {
-    color: var(--active-text-color);
-    vertical-align: -12.5%;
-  }
+  border-bottom: 3px double rgb(42, 157, 143);
 }
