feat: 去掉 tikz，选择背景颜色修改

--- a/src/main.less
+++ b/src/main.less
@@ -24,6 +24,10 @@ body {
   margin: 0;
 }
 
+::selection {
+  background: var(--selection-color);
+}
+
 pre, code {
   font-family: var(--mono-font);
 }
