--- a/src/themes/dark.less
+++ b/src/themes/dark.less
@@ -22,4 +22,5 @@ html[data-theme="dark"] {
   --active-icon-bg: hsl(168, 80%, 20%);
   --bullet-list-item-bg: hsl(168, 45%, 90%);
   --bullet-list-item-shodow: 0 0 0 .3em hsla(168, 90%, 85%, 0.55);
+  --selection-color: #182F3F;
 }
