--- a/src/themes/light.less
+++ b/src/themes/light.less
@@ -24,5 +24,6 @@ html[data-theme='light'] {
   --card-line-color: hsl(168, 40%, 80%);
   --bullet-list-item-bg: hsl(168, 10%, 45%);
   --bullet-list-item-shodow: 0 0 0 .3em hsla(168, 90%, 85%, 0.55);
+  --selection-color: #D9F0FF;
 }
 
