fix: 全屏态修复

--- a/src/layouts/ClassicLayout/index.module.less
+++ b/src/layouts/ClassicLayout/index.module.less
@@ -10,7 +10,7 @@
   &.focusMode {
     --sidebar-width: 0;
     --list-width: 0;
-    --title-bar-height: 0;
+    //--title-bar-height: 0;
     .sidebar {
       overflow: hidden;
       border: none;
