--- a/src/components/EditRecordModal/index.module.less
+++ b/src/components/EditRecordModal/index.module.less
@@ -12,7 +12,7 @@
     gap: 10px;
     align-items: center;
   }
-  .eventType {
+  .eventType, .timeType {
     display: flex;
     gap: 10px;
     align-items: center;
