--- a/src/pages/PDF/index.css
+++ b/src/pages/PDF/index.css
@@ -2,9 +2,12 @@
     position: absolute;
     pointer-events: none;
     z-index: 2;
-    background-color: rgba(0, 0, 0, 0.05);
     left: 0;
     top: 0;
     right: 0;
     bottom: 0;
+}
+
+.disable-selection {
+    user-select: none;
 }
