feat: PDF 高亮笔记功能完善

--- a/src/layouts/ClassicLayout/index.module.less
+++ b/src/layouts/ClassicLayout/index.module.less
@@ -45,6 +45,7 @@
       border-bottom: 1px solid var(--line-color);
     }
     .content {
+      position: relative;
       width: 100%;
       height: calc(100% - var(--title-bar-height));
       box-sizing: border-box;
