--- a/src/components/PDF/HighlightTips/Tips/index.module.less
+++ b/src/components/PDF/HighlightTips/Tips/index.module.less
@@ -4,6 +4,7 @@
   background-color: #F4F5F7;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.08);
   box-sizing: border-box;
+  color: black;
   .strictHeight {
     max-height: 400px;
     overflow-y: auto;
