--- a/src/themes/light.less
+++ b/src/themes/light.less
@@ -1,6 +1,6 @@
 html[data-theme='light'] {
-  --primary-bg-color: #fff;
-  --line-color: #F5F5F5;
+  --primary-bg-color: #F9F9F9;
+  --line-color: #E9E9E9;
   --text-normal: black;
   --code-normal: #18045f;
   --code-bg: transparent;
@@ -15,8 +15,8 @@ html[data-theme='light'] {
   --tab-active-color: #ecedf1;
   --scroller-track-background-color: rgba(0, 0, 0, 0.04);
   --scroller-thumb-background-color: rgba(0, 0, 0, 0.06);
-  --normal-card-bg: hsl(168, 5%, 97%);
-  --common-hover-bg: hsl(168, 5%, 94%);
+  --normal-card-bg: hsl(168, 8%, 95%);
+  --common-hover-bg: hsl(168, 8%, 90%);
   --normal-icon-bg: #e8e8e8;
   --active-bg-color: hsl(168, 80%, 95%);
   --active-text-color: hsl(168, 50%, 30%);
