--- a/src/components/WindowControl/index.module.less
+++ b/src/components/WindowControl/index.module.less
@@ -3,20 +3,22 @@
   gap: 10px;
   align-items: center;
   .item {
-    width: 40px;
-    height: 40px;
+    width: 32px;
+    height: 32px;
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 0.8em;
     &:hover {
       background-color: var(--common-hover-bg);
       border-radius: 4px;
       cursor: pointer;
     }
     .pin {
-      transform: rotate(-45deg);
+      transform: rotate(0deg);
+      transition: transform 0.2s;
       &.onTop {
-        transform: rotate(0deg);
+        transform: rotate(-45deg);
       }
     }
   }
