--- a/src/components/Editor/extensions/numbered-list/components/NumberedList/index.module.less
+++ b/src/components/Editor/extensions/numbered-list/components/NumberedList/index.module.less
@@ -1,7 +1,22 @@
 .list {
   margin: 0;
-  padding-inline-start: 32px;
-  li:last-child>*:last-child {
+  padding-inline-start: 40px;
+  counter-reset: item;
+  li:last-child *:last-of-type([data-slate-node='element']) {
     margin: 0;
+  }
+
+  &>li {
+    position: relative;
+    list-style-type: none;
+    counter-increment: item;
+    &::before {
+      position: absolute;
+      content: counter(item) ".";
+      width: 2em;
+      height: 1em;
+      left: -1.5em;
+      top: 0.1em;
+    }
   }
 }
