--- a/src/layouts/ClassicLayout/Content/Article/index.module.less
+++ b/src/layouts/ClassicLayout/Content/Article/index.module.less
@@ -5,22 +5,33 @@
   .cover {
     width: 100%;
     aspect-ratio: 8 / 3;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
     display: flex;
     flex-direction: column;
     gap: 20px;
     align-items: center;
     justify-content: center;
     color: #fff;
+    position: relative;
+    .img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center;
+      position: absolute;
+      left: 0;
+      top: 0;
+    }
     .title {
+      text-align: center;
+      width: 80%;
+      position: relative;
       font-size: 48px;
       font-weight: bold;
       margin: 0;
       padding-left: 4px;
     }
     .metaInfo {
+      position: relative;
       display: flex;
       gap: 8px;
       align-items: center;
