--- a/src/components/WindowControl/index.module.less
+++ b/src/components/WindowControl/index.module.less
@@ -21,5 +21,27 @@
         transform: rotate(-45deg);
       }
     }
+
+  }
+}
+
+.columns {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  .column {
+    &:hover {
+      background-color: var(--common-hover-bg);
+    }
+    display: flex;
+    gap: 4px;
+    align-items: center;
+    padding: 4px 8px;
+    border-radius: 4px;
+    cursor: pointer;
+    .icon {
+      width: 12px;
+      height: 12px;
+    }
   }
 }
