--- a/src/components/Outline/index.module.less
+++ b/src/components/Outline/index.module.less
@@ -5,10 +5,10 @@
   .header {
     &:hover {
       cursor: pointer;
-      color: #1a66ff;
+      color: var(--active-text-color);
     }
     &.active {
-      color: #1a66ff;
+      color: var(--active-text-color);
     }
     &[data-level="2"] {
       padding-left: 16px;
