--- a/src/layouts/ClassicLayout/Content/Article/index.module.less
+++ b/src/layouts/ClassicLayout/Content/Article/index.module.less
@@ -2,6 +2,8 @@
   width: 100%;
   height: 100%;
   overflow-y: auto;
+  container-name: articleContainer;
+  container-type: inline-size;
   .cover {
     width: 100%;
     aspect-ratio: 8 / 3;
@@ -51,19 +53,15 @@
     border-bottom: 40px solid transparent;
     box-sizing: border-box;
     gap: 40px;
+    justify-content: center;
     .editor {
-      margin: 0 auto;
       max-width: 720px;
       flex: auto;
     }
     .outline {
       display: flex;
-      justify-content: flex-end;
-      min-width: 120px;
-      max-width: 280px;
       width: fit-content;
       flex: none;
-      margin-left: auto;
       overflow: hidden;
       max-height: calc(100vh - 80px - var(--title-bar-height));
       overflow-y: auto;
@@ -83,4 +81,28 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@container articleContainer (max-width: 1080px) {
+  .editor {
+    max-width: calc(44.4444% + 240px) !important;
+  }
+  .outline {
+    max-width: 0 !important;
+    border: 0 !important;
+    box-sizing: border-box !important;
+    overflow: hidden !important;
+  }
+}
+
+@container articleContainer (max-width: 540px) {
+  .editor {
+    max-width: calc(100% - 60px) !important;
+  }
+  .outline {
+    max-width: 0 !important;
+    border: 0 !important;
+    box-sizing: border-box !important;
+    overflow: hidden !important;
+  }
 }
