feat: 支持文本插件

--- a/src/components/Editor/extensions/paragraph/components/Paragraph/index.module.less
+++ b/src/components/Editor/extensions/paragraph/components/Paragraph/index.module.less
@@ -2,6 +2,9 @@
   position: relative;
   .paragraph {
     margin: 0 0 var(--block-distance, 10px) 0;
+    &.noMargin {
+      margin: 0;
+    }
     @import '@/components/Editor/extensions/drop-common.less';
     &.drop {
       &.before {
