--- a/src/layouts/ClassicLayout/List/WhiteBoardList/index.module.less
+++ b/src/layouts/ClassicLayout/List/WhiteBoardList/index.module.less
@@ -5,6 +5,7 @@
   overflow-y: auto;
 }
 .item {
+  position: relative;
   border-radius: 8px;
   padding: 8px;
   border: 1px solid var(--line-color);
@@ -14,5 +15,21 @@
   }
   &:hover:not(.active) {
     background-color: var(--common-hover-bg);
+  }
+  .snapshot {
+    width: 100%;
+    height: 100px;
+    border-radius: 8px;
+  }
+  .title {
+    font-size: 16px;
+    font-weight: 600;
+    margin-top: 8px;
+    color: var(--text-color);
+  }
+  .description {
+    font-size: 14px;
+    color: gray;
+    margin-top: 4px;
   }
 }
