--- a/src/layouts/ClassicLayout/List/ArticleList/ArticleItem/index.module.less
+++ b/src/layouts/ClassicLayout/List/ArticleList/ArticleItem/index.module.less
@@ -1,46 +1,43 @@
 .articleItem {
   padding: 12px;
-  margin-bottom: 10px;
-  border-radius: 8px;
+  // margin-bottom: 10px;
+  // border-radius: 8px;
   position: relative;
   user-select: none;
-  background-color: var(--normal-card-bg);
+  // background-color: var(--normal-card-bg);
   border: 2px solid transparent;
   box-sizing: border-box;
   cursor: pointer;
   content-visibility: auto;
+  border-bottom: 1px solid var(--line-color);
 
-  .cover {
-    width: 100%;
-    height: 120px;
-    position: relative;
-    //background-repeat: no-repeat;
-    //background-position: center;
-    //background-size: cover;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 10px;
-    border-radius: 4px;
-    .img {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      object-position: center;
-      z-index: -1;
-    }
-    .title {
-      color: #fff;
-      font-size: 1.2em;
-      font-weight: bold;
-      // 超出部分用省略号显示
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-    }
+  .time {
+    opacity: .8;
+    font-size: .9em;
+    margin-bottom: 12px;
+  }
+
+  .contentContainer {
+    width: calc(100% - 64px - 12px);
+    flex: none;
+  }
+
+  .img {
+    margin-left: 12px;
+    width: 64px;
+    height: 64px;
+    border-radius: 12px;
+    object-fit: cover;
+    object-position: center;
+    flex: none;
+  }
+  .title {
+    font-size: 1.2em;
+    font-weight: bold;
+    // 超出部分用省略号显示
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
   }
 
   &:not(.active):hover {
@@ -48,7 +45,7 @@
   }
 
   &.active {
-    border: 2px solid var(--active-text-color);
+    // border: 2px solid var(--active-text-color);
     background-color: var(--active-bg-color);
     .moreIcon {
       background-color: var(--active-icon-bg);
@@ -71,5 +68,34 @@
   .tags {
     margin-top: 10px;
     color: var(--tag-color);
+  }
+}
+.operate {
+  position: absolute;
+  top: 6px;
+  right: 6px;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  z-index: 1;
+  &:hover {
+    cursor: pointer;
+    background-color: rgba(255, 255, 255, 0.2);
+  }
+}
+.settings {
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
+  .settingItem {
+    padding: 8px 16px;
+    border-radius: 4px;
+    &:hover {
+      background-color: var(--common-hover-bg);
+      cursor: pointer;
+    }
   }
 }
