--- a/src/layouts/ShortSidebarLayout/index.module.less
+++ b/src/layouts/ShortSidebarLayout/index.module.less
@@ -18,7 +18,13 @@
       border-bottom: 1px solid var(--line-color);
     }
     .main {
-      height: calc(100vh - var(--titlebar-height));
+      width: 100%;
+      height: calc(100vh - var(--title-bar-height));
+      // border: 12px solid transparent;
+      box-sizing: border-box;
+      // border-radius: 24px;
+      // background-color: #fff;
+      // background-clip: padding-box;
     }
   }
 }
