--- a/src/components/IconText/index.module.less
+++ b/src/components/IconText/index.module.less
@@ -10,6 +10,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    color: currentColor;
+    fill: currentColor;
   }
   &.active {
     color: var(--active-text-color);
