--- a/src/layouts/ShortSidebarLayout/components/CardGrid/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/CardGrid/index.module.less
@@ -106,6 +106,24 @@
   }
 }
 
+.categories {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  .categoryItem {
+    cursor: pointer;
+    padding: 8px 12px;
+    border-radius: 8px;
+    &:hover:not(.disable) {
+      background-color: var(--common-hover-bg);
+    }
+    &.disable {
+      cursor: not-allowed;
+      opacity: 0.5;
+    }
+  }
+}
+
 @container cardListContainer (max-width: 1080px) {
   .container {
     &.showEdit {
