--- a/src/layouts/ThreeColumnLayout/Content/Article/index.module.less
+++ b/src/layouts/ThreeColumnLayout/Content/Article/index.module.less
@@ -47,6 +47,7 @@
     }
   }
   .content {
+    border-top: 40px solid transparent;
     border-bottom: 40px solid transparent;
     width: 100%;
     display: flex;
