--- a/src/layouts/components/ArticleCard/index.module.less
+++ b/src/layouts/components/ArticleCard/index.module.less
@@ -1,4 +1,11 @@
+.cardContainer {
+  container: article-card-container / inline-size;
+  width: 100%;
+  height: 100%;
+}
+
 .articleCard {
+  //width: 100%;
   --card-bg: #e1e5ea;
   --text-color: #18151f;
   --gradient-angle: -80deg;
@@ -6,22 +13,14 @@
   display: flex;
   align-items: center;
   overflow: hidden;
-  height: 360px;
-  width: 1000px;
   flex: none;
+  width: 1000px;
+  height: 360px;
+  margin: 0 auto;
   border-radius: 12px;
   box-shadow: 0 4px 21px -12px rgba(0, 0, 0, 0.66);
   background-color: var(--card-bg);
   background-image: linear-gradient(var(--gradient-angle), var(--bg-color2), transparent 50%);
-  @media screen and (max-width: 1200px) {
-    width: 800px;
-  }
-  @media screen and (max-width: 1000px) {
-    width: 600px;
-  }
-  @media screen and (max-width: 800px) {
-      width: 400px;
-  }
   &.right {
     --gradient-angle: 80deg;
   }
@@ -83,6 +82,7 @@
       font-size: 32px;
       font-weight: bold;
       color: var(--text-normal);
+      user-select: none;
       &:hover {
         cursor: pointer;
         color: var(--bg-color1);
@@ -131,6 +131,48 @@
       left: 10px;
     }
   }
+}
+
+@container article-card-container (max-width: 1080px) {
+  .articleCard {
+    width: 80%;
+  }
+}
+
+@container article-card-container (max-width: 480px) {
+  .articleCard {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+    --gradient-angle: 40deg;
+    .content {
+      box-sizing: border-box;
+      padding: 20px;
+      width: 100%;
+      height: auto;
+      overflow: visible;
+      .operate {
+        top: -140px;
+        right: 10px;
+        &.left {
+          left: unset;
+        }
+      }
+    }
+    .imageContainer {
+      width: 100%;
+      height: 150px;
+      &.right {
+        order: 0;
+        .topStar {
+          left: 10px;
+        }
+      }
+    }
+  }
+
 }
 
 .settings {
