feat: Titlebar 优化，侧边栏收起

--- a/src/layouts/ShortSidebarLayout/components/ArticleView/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/ArticleView/index.module.less
@@ -6,6 +6,10 @@
 
   &.showEdit {
     --article-list-width: 400px;
+    &.hideArticleList {
+      --article-list-width: 0px;
+      padding: 0;
+    }
   }
 
   .listContainer {
