--- a/src/layouts/ShortSidebarLayout/components/DocumentView/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/DocumentView/index.module.less
@@ -3,6 +3,9 @@
   height: 100%;
   --sidebar-width: 300px;
   display: flex;
+  &.hideSidebar {
+    --sidebar-width: 0px;
+  }
   .sidebar {
     width: var(--sidebar-width);
     height: 100%;
