--- a/src/layouts/ThreeColumnLayout/List/DocumentList/index.module.less
+++ b/src/layouts/ThreeColumnLayout/List/DocumentList/index.module.less
@@ -1,6 +1,6 @@
 .documentList {
   padding: 0 16px;
-  height: 100vh;
+  height: 100%;
   overflow-y: auto;
   border-top: 16px solid transparent;
   border-bottom: 16px solid transparent;
