--- a/src/main.less
+++ b/src/main.less
@@ -6,7 +6,7 @@ html, body {
 }
 
 body {
-  --font: 'Merriweather', '新宋体', '宋体', '楷体-简';
+  --font: --apple-system, BlinkMacSystemFont, 'PT Mono', 'JetBrains Mono', 'Consolas', 'Segoe UI', '新宋体', '宋体', '楷体-简';
   --mono-font: 'JetBrains Mono', '楷体', '楷体-简';
   --font-size: 16px;
   --block-distance: 20px;
