fix: 白板图片粘贴优化

--- a/src/layouts/components/ArticleCard/index.module.less
+++ b/src/layouts/components/ArticleCard/index.module.less
@@ -5,7 +5,6 @@
 }
 
 .articleCard {
-  //width: 100%;
   --card-bg: #e1e5ea;
   --text-color: #18151f;
   --gradient-angle: -80deg;
@@ -147,6 +146,7 @@
     flex-direction: column;
     gap: 0;
     --gradient-angle: 40deg;
+    box-shadow: 0 1.5px 3px 0 rgb(0 0 0 / 15%);
     .content {
       box-sizing: border-box;
       padding: 20px;
