--- a/src/layouts/ShortSidebarLayout/index.module.less
+++ b/src/layouts/ShortSidebarLayout/index.module.less
@@ -18,13 +18,72 @@
       border-bottom: 1px solid var(--line-color);
     }
     .main {
+      display: flex;
       width: 100%;
       height: calc(100vh - var(--title-bar-height));
-      // border: 12px solid transparent;
       box-sizing: border-box;
-      // border-radius: 24px;
-      // background-color: #fff;
-      // background-clip: padding-box;
+      .mainContent {
+        flex: 1;
+        height: 100%;
+      }
+      .rightSidebar {
+        box-sizing: border-box;
+        flex: none;
+        height: 100%;
+        .wrapContainer {
+          height: 100%;
+          box-sizing: border-box;
+          padding: 12px;
+          .innerContainer {
+            box-sizing: border-box;
+            padding: 12px;
+            height: 100%;
+            border-radius: 8px;
+            border: 1px solid var(--line-color);
+            display: flex;
+            flex-direction: column;
+            .header {
+              display: flex;
+              align-items: center;
+              gap: 12px;
+              height: 60px;
+              align-content: center;
+            }
+            .messages {
+              border-top: 24px solid transparent;
+              border-bottom: 24px solid transparent;
+              padding: 0 24px;
+              display: flex;
+              flex-direction: column;
+              gap: 24px;
+              flex: 1;
+              overflow-y: auto;
+              box-sizing: border-box;
+              .message {
+                background: #f5f6f9;
+                border-radius: 24px;
+              }
+            }
+            .input {
+              display: flex;
+              flex: none;
+              padding: 12px 24px;
+              border-radius: 24px;
+              box-sizing: border-box;
+              border: 1px solid var(--line-color);
+              min-height: 48px;
+              align-items: center;
+              .inputContent {
+                flex: 1;
+              }
+              .btn {
+                flex: none;
+                margin-left: 12px;
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
