--- a/src/layouts/ShortSidebarLayout/components/AISearch/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/AISearch/index.module.less
@@ -1,21 +1,109 @@
 /* HTML: <div class="loader"></div> */
-.loader {
-  width: 60px;
-  aspect-ratio: 2;
-  --_g: no-repeat radial-gradient(circle closest-side,#000 90%,#0000);
-  background:
-          var(--_g) 0%   50%,
-          var(--_g) 50%  50%,
-          var(--_g) 100% 50%;
-  background-size: calc(100%/3) 50%;
-  animation: l3 1s infinite linear;
-  &.dark {
-    --_g: no-repeat radial-gradient(circle closest-side,#fff 90%,#fff0);
+.loadingContainer {
+  height: 160px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* HTML: <div class="loader"></div> */
+  .loader {
+    width: 40px;
+    padding: 8px;
+    aspect-ratio: 1;
+    border-radius: 50%;
+    background: rgba(10, 10, 10, 0.54);
+    --_m:
+            conic-gradient(#0000 10%,#000),
+            linear-gradient(#000 0 0) content-box;
+    -webkit-mask: var(--_m);
+    mask: var(--_m);
+    -webkit-mask-composite: source-out;
+    mask-composite: subtract;
+    animation: l3 1s infinite linear;
+    &.dark {
+      background: #eae9e9;
+    }
   }
+  @keyframes l3 {to{transform: rotate(1turn)}}
 }
-@keyframes l3 {
-  20%{background-position:0%   0%, 50%  50%,100%  50%}
-  40%{background-position:0% 100%, 50%   0%,100%  50%}
-  60%{background-position:0%  50%, 50% 100%,100%   0%}
-  80%{background-position:0%  50%, 50%  50%,100% 100%}
+
+.commandContainer {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  left: 0;
+  top: 0;
+  z-index: 100;
+  .mask {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: rgba(17, 25, 39, .8);
+  }
+  .panel {
+    position: absolute;
+    width: 540px;
+    top: calc(50% - 240px);
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: white;
+    &.dark {
+      background-color: #111827;
+    }
+    box-sizing:
+            rgba(0, 0, 0, 0) 0px 0px 0px 0px,
+            rgba(0, 0, 0, 0) 0px 0px 0px 0px,
+            rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
+            rgba(0, 0, 0, 0.1) 0px 4px 6px -4px;
+    border-radius: 8px;
+    .searchHeader {
+      display: flex;
+      width: 100%;
+      height: 56px;
+      padding: 16px 0;
+      box-sizing: border-box;
+      align-items: center;
+      border-bottom: 1px solid var(--line-color);
+      .searchIcon {
+        flex: none;
+        width: 40px;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      .search {
+        flex: 1;
+      }
+    }
+    .resultContainer {
+      max-height: 400px;
+      overflow-y: auto;
+      .list {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+        padding: 12px;
+        .item {
+          position: relative;
+          border-radius: 8px;
+          padding: 16px;
+          cursor: pointer;
+          &:hover {
+            background-color: var(--common-hover-bg);
+          }
+          &:not(:last-child) {
+            &::after {
+              content: "";
+              position: absolute;
+              width: calc(100% - 32px);
+              height: 1px;
+              background-color: var(--line-color);
+              left: 16px;
+              bottom: -8px;
+            }
+          }
+        }
+      }
+    }
+  }
 }
