--- a/src/layouts/ShortSidebarLayout/components/AISearch/index.module.less
+++ b/src/layouts/ShortSidebarLayout/components/AISearch/index.module.less
@@ -4,26 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  /* HTML: <div class="loader"></div> */
-  .loader {
-    width: 40px;
-    padding: 8px;
-    aspect-ratio: 1;
-    border-radius: 50%;
-    background: rgba(10, 10, 10, 0.54);
-    --_m:
-            conic-gradient(#0000 10%,#000),
-            linear-gradient(#000 0 0) content-box;
-    -webkit-mask: var(--_m);
-    mask: var(--_m);
-    -webkit-mask-composite: source-out;
-    mask-composite: subtract;
-    animation: l3 1s infinite linear;
-    &.dark {
-      background: #eae9e9;
-    }
-  }
-  @keyframes l3 {to{transform: rotate(1turn)}}
+  font-size: 36px;
 }
 
 .commandContainer {
@@ -38,6 +19,9 @@
     width: 100%;
     height: 100%;
     background: rgba(17, 25, 39, .8);
+    &.dark {
+      background: rgba(17, 25, 39, 0.95);
+    }
   }
   .panel {
     position: absolute;
@@ -47,9 +31,9 @@
     transform: translateX(-50%);
     background-color: white;
     &.dark {
-      background-color: #111827;
+      background-color: rgba(10, 8, 23, 0.95);
     }
-    box-sizing:
+    box-shadow:
             rgba(0, 0, 0, 0) 0px 0px 0px 0px,
             rgba(0, 0, 0, 0) 0px 0px 0px 0px,
             rgba(0, 0, 0, 0.1) 0px 10px 15px -3px,
