feat: bug 修复和优化

--- a/src/components/Editor/extensions/code-block/components/SelectLanguage/index.module.less
+++ b/src/components/Editor/extensions/code-block/components/SelectLanguage/index.module.less
@@ -1,8 +1,5 @@
 .selectLanguage {
-  width: fit-content;
-  &:focus-within {
-    min-width: 125px;
-  }
+  width: 135px;
   &:hover {
     cursor: pointer;
   }
