--- a/src/components/Editor/extensions/code-block/components/CodeBlock/index.module.less
+++ b/src/components/Editor/extensions/code-block/components/CodeBlock/index.module.less
@@ -1,8 +1,8 @@
 .codeBlockContainer {
   position: relative;
-  --code-block-bg-color: rgba(209, 210, 215, 0.11);
+  --code-block-bg-color: #f6f8fa;
   &.dark {
-    --code-block-bg-color: #0c1021;
+    --code-block-bg-color: #161b22;
   }
   &.readOnly {
     :global(.CodeMirror-cursors) {
@@ -10,8 +10,8 @@
     }
   }
   &:hover {
-    .languageSelect {
-      opacity: 1;
+    .copyButton {
+      display: block;
     }
   }
   .copyButton {
@@ -39,10 +39,12 @@
   .languageSelect {
     position: absolute;
     top: 10px;
-    right: 50px;
+    left: 16px;
     z-index: 1;
-    opacity: 1;
     transition: opacity 0.3s;
+    [class*="ant-"] {
+      font-family: var(--mono-font) !important;
+    }
     :global(.ant-select-selector) {
       background-color: transparent;
       border: none;
@@ -51,10 +53,10 @@
   .CodeMirrorContainer :global(.CodeMirror) {
     background-color: var(--code-block-bg-color);
     height: auto;
-    padding: 48px 12px 18px 12px;
+    padding: 48px 12px 18px;
     border-radius: 5px;
     line-height: 1.8;
-    font-size: calc(var(--font-size) * 0.75);
+    font-size: calc(var(--font-size) * 0.8);
     font-family: var(--mono-font, "'Monaco', '楷体'");
   }
 
