--- a/src/layouts/ThreeColumnLayout/List/TimeRecord/index.module.less
+++ b/src/layouts/ThreeColumnLayout/List/TimeRecord/index.module.less
@@ -1,6 +1,7 @@
 .timeRecordContainer {
+  --select-time-height: 60px;
   .list {
-    height: calc(100vh - var(--title-bar-height));
+    height: calc(100vh - var(--title-bar-height) - var(--select-time-height));
     box-sizing: border-box;
     overflow-y: auto;
     padding: 0 16px;
