fix: mac 右侧边栏问题

--- a/src/layouts/ShortSidebarLayout/index.module.less
+++ b/src/layouts/ShortSidebarLayout/index.module.less
@@ -24,9 +24,11 @@
       width: 100%;
       height: calc(100vh - var(--title-bar-height));
       box-sizing: border-box;
+      overflow: hidden;
       .mainContent {
         width: calc(100% - var(--right-sidebar-width));
         height: 100%;
+        overflow: hidden;
       }
     }
   }
