--- a/src/themes/light.less
+++ b/src/themes/light.less
@@ -1,5 +1,5 @@
 html[data-theme='light'] {
-  --primary-bg-color: #F9F9F9;
+  --primary-bg-color: #fcfcfc;
   --line-color: #E9E9E9;
   --text-normal: black;
   --code-normal: #18045f;
