--- a/src/components/WhiteBoard/index.module.less
+++ b/src/components/WhiteBoard/index.module.less
@@ -1,5 +1,6 @@
 .boardContainer {
   position: relative;
+  height: 100%;
 }
 
 .attributeBar {
@@ -10,6 +11,7 @@
   width: 240px;
   background-color: var(--primary-bg-color);
   padding: 20px;
+
   &.hide {
     display: none;
   }
