feat: 白板属性设置器优化，项目白板标题可更新，若干 bug 修复

--- a/src/components/WhiteBoard/index.module.less
+++ b/src/components/WhiteBoard/index.module.less
@@ -3,6 +3,13 @@
   height: 100%;
 }
 
+.verticalBar {
+  position: absolute;
+  left: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
 .attributeBar {
   position: fixed;
   top: var(--title-bar-height, 60px);
