--- a/src/components/WhiteBoard/components/AttributeSetter/common.less
+++ b/src/components/WhiteBoard/components/AttributeSetter/common.less
@@ -1,17 +1,14 @@
-.toolBar {
-  position: absolute;
-  top: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  height: 48px;
+.container {
   background: #fff;
   border-radius: 8px;
-  padding: 0 12px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  .toolBarItem {
+  width: 48px;
+  padding: 12px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  align-items: center;
+  .item {
     color: #999;
     fill: currentColor;
     cursor: pointer;
