--- a/src/components/WhiteBoard/components/RichText/index.module.less
+++ b/src/components/WhiteBoard/components/RichText/index.module.less
@@ -1,5 +1,21 @@
 .richTextContainer {
   width: 100%;
   height: 100%;
+  position: relative;
   --block-distance: 10px;
+  border-radius: 4px;
+
+  .borderTop {
+    position: absolute;
+    width: 100%;
+    height: 8px;
+    border-radius: 4px 4px 0 0;
+    top: 0;
+    z-index: 2;
+  }
+  .editor {
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  }
 }
